@@ -1,3 +1,10 @@
+2003-09-09  Per Bothner  <per@bothner.com>
+
+	* ValuesMap.java (startCounter):  New field.
+	(canInline):  New private helper method.
+	(apply, compile):  If startCounter is non-negative, also pass an
+	index to the mapping function.  Used for XQuery's 'at' clause.
+
 2003-08-20  Per Bothner  <per@bothner.com>
 
 	* AddOp.java (classify):  New helper function.
